[gd_scene load_steps=3 format=3 uid="uid://bu1132gssq8ij"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_rpnsq"]
[ext_resource type="Theme" uid="uid://dpvtn5h8ykqux" path="res://ui_theme.tres" id="2_whjhw"]

[node name="UI" type="CanvasLayer"]
layer = -1
script = ExtResource("1_rpnsq")

[node name="LabelLevel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -126.0
offset_bottom = 48.0
grow_horizontal = 0
theme = ExtResource("2_whjhw")
text = "Level 0"
horizontal_alignment = 2

[node name="LabelTimer" type="Label" parent="."]
offset_right = 126.0
offset_bottom = 48.0
theme = ExtResource("2_whjhw")
text = "0:00.000"

[node name="LabelScore" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 26.0
grow_horizontal = 2
theme = ExtResource("2_whjhw")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
